# pycharm-ia

./: draft_docs.txt  main.py  pyproject.toml  requirements.txt  settings.py
app/: main.py  settings.py
app/tests/: test_main.py
backend/: main.py
