[project]
name = "fastapi-project"
version = "1.0.0"
description = "A REST API project using FastAPI"
authors = []
dependencies = [
    "fastapi>=0.116.1",
    "uvicorn>=0.33.0",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.8.1",
    "python-dotenv>=1.0.1"
]
requires-python = ">=3.8"

[build-system]
requires = ["setuptools>=75.3.2", "wheel>=0.45.1"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3

[tool.pytest]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v -s"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "mypy",
    "pytest"
]